--- a/src/main/webapp/frontend/src/index.css
+++ b/src/main/webapp/frontend/src/index.css
@@ -12,12 +12,22 @@ code {
     monospace;
 }
 
+.nav-link {
+  color: #683ed1 !important;
+}
+
+.navbar-brand {
+  color: #683ed1 !important;
+}
+
 .card {
   box-shadow: 5px 5px 15px rgba(0,0,0, 0.5);
+  max-width: 70%;
+  margin: 0 auto;
 }
 
 .form-control {
-  width: 70%;
+  width: 50%;
   margin: 0 auto;
   text-indent:25px;
 }
@@ -41,4 +51,13 @@ code {
   background-repeat: no-repeat; 
   background-size: 21px 21px;
   background-position: 8px 16px;
+}
+
+.btn-primary {
+  background-color: #683ed1;
+}
+
+.logo {
+  width: 60px;
+  margin-top: -5px;
 }
