--- a/src/main/webapp/frontend/src/index.css
+++ b/src/main/webapp/frontend/src/index.css
@@ -5,11 +5,19 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: whitesmoke;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.navbar {
+  background-color: rgba(255, 255, 255, 0.5) !important;
+	box-shadow: 5px 5px 15px rgba(104, 62, 209, 0.5);
+  -webkit-backdrop-filter: blur(5px);
+  backdrop-filter: blur(5px);
 }
 
 .nav-link {
@@ -21,17 +29,44 @@ code {
 }
 
 .card {
-  box-shadow: 5px 5px 15px rgba(0,0,0, 0.5);
+  box-shadow: 5px 5px 15px rgba(104, 62, 209, 0.5);
   max-width: 70%;
   margin: 0 auto;
 }
 
 .form-control {
-  width: 50%;
+  max-width: 50%;
   margin: 0 auto;
   text-indent:25px;
 }
 
+@media only screen and (max-width: 768px) {
+  .card {
+    box-shadow: 5px 5px 15px rgba(104, 62, 209, 0.5);
+    max-width: 90%;
+    margin: 0 auto;
+  }
+  
+  .form-control {
+    max-width: 85%;
+    margin: 0 auto;
+    text-indent:25px;
+  }
+}
+
+@media only screen and (max-width: 992px) {
+  .card {
+    box-shadow: 5px 5px 15px rgba(104, 62, 209, 0.5);
+    max-width: 90%;
+    margin: 0 auto;
+  }
+  
+  .form-control {
+    max-width: 75%;
+    margin: 0 auto;
+    text-indent:25px;
+  }
+}
 #inputEmail {
   background-image:url(./images/envelope.png); 
   background-repeat: no-repeat; 
