--- a/src/main/webapp/frontend/src/index.css
+++ b/src/main/webapp/frontend/src/index.css
@@ -547,3 +547,9 @@ th {
   display:flex;
   justify-content: flex-start;
 }
+
+.editUser {
+  background-color: white;
+  max-width: 30%;
+  box-shadow: 0px 0px 15px 1px rgba(104, 62, 209, 0.9);
+}
