--- a/src/main/webapp/frontend/src/index.css
+++ b/src/main/webapp/frontend/src/index.css
@@ -43,6 +43,17 @@ code {
     color: #683ed1 !important;
 }
 
+@media screen and (max-width: 997px) {
+    .navbar-brand {
+        margin-left: 0 !important;
+        margin-right: 0 !important;
+    }
+
+    .navbar-toggler {
+        padding: 0.25rem 0.5rem !important;
+    }
+}
+
 .card {
     box-shadow: 0px 0px 15px 1px rgba(104, 62, 209, 0.9);
     max-width: 75%;
@@ -135,6 +146,22 @@ code {
     background-position: 1.2% 55%;
 }
 
+.searchBar__search {
+    padding-left: 1.5rem !important;
+}
+
+.searchBar__filters {
+    padding: 0 1.5rem 0 1.5rem !important;
+}
+
+@media screen and (max-width: 997px) {
+    .searchBar__search,
+    .searchBar__filters {
+        padding-left: 1rem !important;
+        padding-right: 1rem !important;
+    }
+}
+
 .logo {
     width: 60px;
     margin-top: -5px;
@@ -214,7 +241,7 @@ code {
 .recipeTile {
     width: 350px;
     height: 250px;
-    margin: 20px;
+    margin: 20px 0 20px 0px;
     box-shadow: 2px 2px 15px #683ed1;
     border: 1px solid #683ed1;
     position: relative;
@@ -282,6 +309,17 @@ footer {
     text-align: center;
 }
 
+@media screen and (max-width: 997px) {
+    .recipeForm {
+        padding: 1rem !important;
+        font-size: 0.9rem !important;
+    }
+
+    .lead {
+        font-size: 1rem !important;
+    }
+}
+
 #recipeName {
     max-width: 100%;
 }
@@ -292,7 +330,7 @@ footer {
 
 .recipePictureContainer {
     position: relative;
-    width: 400px;
+    width: 100%;
     margin: 0 auto;
 }
 
@@ -303,7 +341,7 @@ footer {
 }
 
 #recipePicture {
-    width: 400px;
+    width: 100%;
     height: 400px;
     object-fit: cover;
     border: 2px dashed rgba(104, 62, 209) !important;
@@ -397,6 +435,18 @@ label {
     margin-top: 45px;
     text-align: center;
     justify-content: center;
+}
+
+.page-item:first-child,
+.page-item:first-child .page-link {
+    border-top-left-radius: 0.5rem;
+    border-bottom-left-radius: 0.5rem;
+}
+
+.page-item:last-child,
+.page-item:last-child .page-link {
+    border-top-right-radius: 0.5rem;
+    border-bottom-right-radius: 0.5rem;
 }
 
 .page-link {
@@ -585,6 +635,7 @@ th {
 
 .filters__dialog-button {
     width: 100%;
+    padding: 0.75em 0 !important;
 }
 
 .modal-body__sort {
